Make stats table fit on mobile. Issue: #370

--- a/packages/kujua-reporting/css/base.less
+++ b/packages/kujua-reporting/css/base.less
@@ -379,3 +379,18 @@
   overflow-x: hidden;
   padding: 0;
 }
+
+@media (max-width: 767px) {
+    #stats table {
+        font-size: 0.8em;
+        #reporting-data .data-records table {
+            font-size: 0.8em;
+        }
+    }
+    #stats td,
+    #stats th,
+    #reporting-data .data-records th,
+    #reporting-data .data-records td {
+        padding-left: 10px;
+    }
+}
